# quanttide-laboratory-of-narrative-engineering

./: .coverage  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  main.rs
apps/: README.md
apps/cli/: .coverage  ROADMAP.md  pyproject.toml
apps/cli/cli/: __init__.py  app.py
apps/cli/docs/: README.md
apps/cli/qtcloud_3r.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
apps/cli/tests/: test_cli.py
apps/narrative-cli/: Cargo.toml  ROADMAP.md
apps/narrative-cli/src/: contract.rs  lib.rs  llm.rs  main.rs
apps/narrative-cli/src/commands/: extract.rs  gap.rs  inspire.rs  mod.rs  review.rs
apps/narrative-cli/src/prompts/: mod.rs
examples/: README.md  ROADMAP.md  STATUS.md
examples/p16-reader/: CONCLUSION.md  E4-2_TASK.md  README.md  ROADMAP.md  STATUS.md  TODO.md  pyproject.toml  requirements.txt  run.py  uv.toml
examples/p16-reader/data/output/: e4-5_l3_cache.json  e4-5_summary.json
examples/p16-reader/docs/adr/: 001-python-minimal-deps.md
examples/p16-reader/docs/experiments/: E4-6-reflect-design.md  E4-7-rewrite-design.md
examples/p16-reader/phase1/: __init__.py  planted_errors.json  profiles.json
examples/p16-reader/src/: __init__.py  __main__.py  e4_7.py  pipeline.py
examples/p16-reader/src/layer1/: backtracking.py  inference_demand.py  llm_labels.py  situation_model.py  validate.py  working_memory.py
examples/p16-reader/src/layer2/: validate.py  weight_mapping.py  weight_ratios.py
examples/p16-reader/src/phase1/: e4_0_manipulation.py  e4_1_differentiation.py  e4_1_pilot.py  e4_2_anchoring.py  e4_2_generalization.py  prompt_templates.py
examples/p17-reader-revision/: README.md  pyproject.toml
examples/p17-reader-revision/data/output/: T1_contract.json  T1_feedback.json  T1_reader.json  T1_side_by_side.json  T2_contract.json  T2_feedback.json  T2_reader.json  T2_side_by_side.json  T3_contract.json  T3_feedback.json  T3_reader.json  T3_side_by_side.json  T4_contract.json  T4_feedback.json  T4_reader.json  T4_side_by_side.json  feedback.html  summary.json
examples/p17-reader-revision/src/: __main__.py  config.py  contract.py  feedback.py  pipeline.py  reader_mapping.py  side_by_side.py
src/: contract.rs  lib.rs  main.rs  workflow.rs
tests/: integration.rs
(+648 files in other folders)
