[package]
name = "narrative-cli"
version = "0.1.0"
edition = "2021"
description = "QuantTide Narrative Engineering CLI — motif extraction, style review, gap analysis, and improvement suggestions"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
