[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "p16-reader"
version = "0.1.0"
description = "E4 模拟读者系统 — 认知加工模拟与读者画像分化验证"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.13",
    "scikit-learn>=1.5",
    "fastembed>=0.5",
    "requests>=2.31",
    "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]
